fix header alignment

--- a/client/src/components/header/index.css
+++ b/client/src/components/header/index.css
@@ -10,7 +10,7 @@
 .title {
   font-weight: bold;
   color: #0077cc;
-  text-align: center;
+  text-align: left;
   flex: 1;
 }
 
